--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,12 +9,10 @@
  */
 {
   "current": {
-    "logo": "shopify://shop_images/sprinix-kart_3.svg",
-    "logo_width": 110,
-    "favicon": "shopify://shop_images/Group.svg",
+    "logo_width": 90,
     "type_header_font": "assistant_n4",
     "heading_scale": 100,
-    "type_body_font": "poppins_n4",
+    "type_body_font": "assistant_n4",
     "body_scale": 100,
     "sp-quick-view-container": true,
     "page_width": 1600,
@@ -22,12 +20,12 @@
     "spacing_grid_horizontal": 8,
     "spacing_grid_vertical": 8,
     "buttons_border_thickness": 1,
-    "buttons_border_opacity": 25,
-    "buttons_radius": 4,
+    "buttons_border_opacity": 100,
+    "buttons_radius": 0,
     "buttons_shadow_opacity": 0,
     "buttons_shadow_horizontal_offset": 0,
-    "buttons_shadow_vertical_offset": 2,
-    "buttons_shadow_blur": 0,
+    "buttons_shadow_vertical_offset": 4,
+    "buttons_shadow_blur": 5,
     "variant_pills_border_thickness": 1,
     "variant_pills_border_opacity": 55,
     "variant_pills_radius": 40,
@@ -106,13 +104,13 @@
     "badge_corner_radius": 40,
     "sale_badge_color_scheme": "scheme-5",
     "sold_out_badge_color_scheme": "scheme-3",
-    "social_facebook_link": "https://www.facebook.com/Sprinix-Technolabs-104848581047921/",
-    "social_instagram_link": "https://www.instagram.com/sprinix_technolabs/",
-    "social_youtube_link": "https://www.youtube.com/@sprinixtechnolabs",
+    "social_facebook_link": "",
+    "social_instagram_link": "",
+    "social_youtube_link": "",
     "social_tiktok_link": "",
-    "social_twitter_link": "https://twitter.com/SprinixTech",
+    "social_twitter_link": "",
     "social_snapchat_link": "",
-    "social_pinterest_link": "https://in.pinterest.com/sprinixtechnolabs/",
+    "social_pinterest_link": "",
     "social_tumblr_link": "",
     "social_vimeo_link": "",
     "predictive_search_enabled": true,
@@ -143,7 +141,7 @@
         "settings": {
           "background": "#ffffff",
           "background_gradient": "",
-          "text": "#191919",
+          "text": "#121212",
           "button": "#121212",
           "button_label": "#ffffff",
           "secondary_button_label": "#121212",
@@ -163,7 +161,7 @@
       },
       "scheme-3": {
         "settings": {
-          "background": "rgba(0,0,0,0)",
+          "background": "#242833",
           "background_gradient": "",
           "text": "#ffffff",
           "button": "#ffffff",
