colorful section fixed

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,11 +11,11 @@
   "current": {
     "logo": "shopify://shop_images/logo_d32d2c17-0176-446f-9400-94cdc040775b.png",
     "logo_width": 80,
-    "type_header_font": "assistant_n4",
+    "type_header_font": "helvetica_n4",
     "heading_scale": 100,
-    "type_body_font": "assistant_n4",
+    "type_body_font": "helvetica_n4",
     "body_scale": 100,
-    "page_width": 1600,
+    "page_width": 3000,
     "spacing_sections": 0,
     "spacing_grid_horizontal": 8,
     "spacing_grid_vertical": 8,
