update: add zip file and config data rename

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -221,7 +221,7 @@
     }
   },
   "presets": {
-    "Default": {
+    "Sprinix Pro": {
       "logo_width": 90,
       "color_schemes": {
         "scheme-1": {
